# OpenCV_SVM_DEMO

./: README.md  crop.py
HOG_SVM/: CMakeLists.txt  HOG_SVM  hog_svm.cpp  predict.txt  testlist.txt  traininglist.txt  注意!.txt
MODETEST/: CMakeLists.txt  MODETEST  factory.xml  modetest.cpp
cropped/: create_trainTxt_testTxt.py  random_pick_pics.py
